@@ -1,3 +1,10 @@
+2011-06-29  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_events.php,
+	  operation/events/events_list.php,
+	  operation/events/events.php: Merged from trunk. Improved event
+	  behaviour.
+
 2011-06-17  Ramon Novoa  <rnovoa@artica.es>
 
 	* godmode/alerts/alert_actions.php: Merged from trunk. Aesthetic fix.
